2016-01-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.h.in,
    gpasm/gperror.c, gpasm/gperror.h, gpasm/util.c:
    Extension of ERROR and MESSG: These directives - inside of
    the parameter string - recognize and execute the #v() macro.

  * gpasm/ppscan.l, gpasm/preprocess.c:
    Code cosmetic.

2016-01-10  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpcoffopt.c:
    Fixed bug: "#286 Linker optimization level 2 crashes gplink"

  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.h.in,
    gpasm/processor.c, gpasm/special.c, libgputils/gpdis.c,
    libgputils/gpopcode.c, libgputils/gpopcode.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    New constants: __BANK_INV, __PAGE_BITS, __PAGE_MASK,
                   __PAGE_SIZE, __PAGE_INV
    New built-in variable: __ACTIVE_PAGE_ADDR

  * gpasm/scan.h, gpasm/scan.l:
    Use logical constants (false, true).

  * gpasm/gpasm.c, gpasm/parse.y, gplink/cod.c, gplink/gplink.c,
    libgputils/gpcofflink.c, libgputils/gpreadobj.c:
    Code cosmetic.

2016-01-05  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c,
    gpasm/gpasm.h.in, gpasm/processor.c,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    Extended version of "Smarter message 302".
    New constants: __BANK_BITS, __BANK_MASK, __BANK_SIZE
    New built-in variable: __ACTIVE_BANK_ADDR

  * gpasm/evaluate.c, gpasm/lst.c, gpasm/parse.y, gpasm/util.c:
    Renamed some constant and variable.

  * gpasm/directive.h:
    Code cosmetic.

2016-01-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gpasm/gpasm.c, gpasm/gpasm.h.in,
    gpasm/gperror.c, libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    Smarter message 302. The basis of a proposal from Petr Mikse.
    (Patch: #65 Smarter message 302)

  * libgputils/gparchive.c, libgputils/gpcfg.c,