@@ -29,18 +29,18 @@ const struct insn op_12c5xx[] = {
   { "andwf" ,  PIC12_MASK_ANDWF ,  PIC12_INSN_ANDWF ,    ICODE_ANDWF , INSN_CLASS_OPWF5   , INV_MASK_NULL },
   { "bcf"   ,  PIC12_MASK_BCF   ,  PIC12_INSN_BCF   ,    ICODE_BCF   , INSN_CLASS_B5      , INV_MASK_NULL },
   { "bsf"   ,  PIC12_MASK_BSF   ,  PIC12_INSN_BSF   ,    ICODE_BSF   , INSN_CLASS_B5      , INV_MASK_NULL },
-  { "btfsc" ,  PIC12_MASK_BTFSC ,  PIC12_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_B5      , INV_MASK_NULL },
-  { "btfss" ,  PIC12_MASK_BTFSS ,  PIC12_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_B5      , INV_MASK_NULL },
+  { "btfsc" ,  PIC12_MASK_BTFSC ,  PIC12_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_B5      , INV_MASK_SKIP },
+  { "btfss" ,  PIC12_MASK_BTFSS ,  PIC12_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_B5      , INV_MASK_SKIP },
   { "call"  ,  PIC12_MASK_CALL  ,  PIC12_INSN_CALL  ,    ICODE_CALL  , INSN_CLASS_LIT8C12 , INV_MASK_BANK | INV_MASK_PAGE },
   { "clrf"  ,  PIC12_MASK_CLRF  ,  PIC12_INSN_CLRF  ,    ICODE_CLRF  , INSN_CLASS_OPF5    , INV_MASK_NULL },
   { "clrw"  ,  PIC12_MASK_CLRW  ,  PIC12_INSN_CLRW  ,    ICODE_CLRW  , INSN_CLASS_IMPLICIT, INV_MASK_NULL },
   { "clrwdt",  PIC12_MASK_CLRWDT,  PIC12_INSN_CLRWDT,    ICODE_CLRWDT, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
   { "comf"  ,  PIC12_MASK_COMF  ,  PIC12_INSN_COMF  ,    ICODE_COMF  , INSN_CLASS_OPWF5   , INV_MASK_NULL },
   { "decf"  ,  PIC12_MASK_DECF  ,  PIC12_INSN_DECF  ,    ICODE_DECF  , INSN_CLASS_OPWF5   , INV_MASK_NULL },
-  { "decfsz",  PIC12_MASK_DECFSZ,  PIC12_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWF5   , INV_MASK_NULL },
+  { "decfsz",  PIC12_MASK_DECFSZ,  PIC12_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWF5   , INV_MASK_SKIP },
   { "goto"  ,  PIC12_MASK_GOTO  ,  PIC12_INSN_GOTO  ,    ICODE_GOTO  , INSN_CLASS_LIT9    , INV_MASK_BANK },
   { "incf"  ,  PIC12_MASK_INCF  ,  PIC12_INSN_INCF  ,    ICODE_INCF  , INSN_CLASS_OPWF5   , INV_MASK_NULL },
-  { "incfsz",  PIC12_MASK_INCFSZ,  PIC12_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWF5   , INV_MASK_NULL },
+  { "incfsz",  PIC12_MASK_INCFSZ,  PIC12_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWF5   , INV_MASK_SKIP },
   { "iorlw" ,  PIC12_MASK_IORLW ,  PIC12_INSN_IORLW ,    ICODE_IORLW , INSN_CLASS_LIT8    , INV_MASK_NULL },
   { "iorwf" ,  PIC12_MASK_IORWF ,  PIC12_INSN_IORWF ,    ICODE_IORWF , INSN_CLASS_OPWF5   , INV_MASK_NULL },
   { "movf"  ,  PIC12_MASK_MOVF  ,  PIC12_INSN_MOVF  ,    ICODE_MOVF  , INSN_CLASS_OPWF5   , INV_MASK_NULL },
@@ -84,18 +84,18 @@ const struct insn op_sx[] = {
   { "bank"  ,  SX_MASK_BANK     ,  SX_INSN_BANK     ,    ICODE_BANK  , INSN_CLASS_LIT3_BANK, INV_MASK_NULL }, /* SX only */
   { "bcf"   ,  PIC12_MASK_BCF   ,  PIC12_INSN_BCF   ,    ICODE_BCF   , INSN_CLASS_B5       , INV_MASK_NULL },
   { "bsf"   ,  PIC12_MASK_BSF   ,  PIC12_INSN_BSF   ,    ICODE_BSF   , INSN_CLASS_B5       , INV_MASK_NULL },
-  { "btfsc" ,  PIC12_MASK_BTFSC ,  PIC12_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_B5       , INV_MASK_NULL },
-  { "btfss" ,  PIC12_MASK_BTFSS ,  PIC12_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_B5       , INV_MASK_NULL },
+  { "btfsc" ,  PIC12_MASK_BTFSC ,  PIC12_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_B5       , INV_MASK_SKIP },
+  { "btfss" ,  PIC12_MASK_BTFSS ,  PIC12_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_B5       , INV_MASK_SKIP },
   { "call"  ,  PIC12_MASK_CALL  ,  PIC12_INSN_CALL  ,    ICODE_CALL  , INSN_CLASS_LIT8C12  , INV_MASK_BANK | INV_MASK_PAGE  },
   { "clrf"  ,  PIC12_MASK_CLRF  ,  PIC12_INSN_CLRF  ,    ICODE_CLRF  , INSN_CLASS_OPF5     , INV_MASK_NULL },
   { "clrw"  ,  PIC12_MASK_CLRW  ,  PIC12_INSN_CLRW  ,    ICODE_CLRW  , INSN_CLASS_IMPLICIT , INV_MASK_NULL },
   { "clrwdt",  PIC12_MASK_CLRWDT,  PIC12_INSN_CLRWDT,    ICODE_CLRWDT, INSN_CLASS_IMPLICIT , INV_MASK_NULL },
   { "comf"  ,  PIC12_MASK_COMF  ,  PIC12_INSN_COMF  ,    ICODE_COMF  , INSN_CLASS_OPWF5    , INV_MASK_NULL },
   { "decf"  ,  PIC12_MASK_DECF  ,  PIC12_INSN_DECF  ,    ICODE_DECF  , INSN_CLASS_OPWF5    , INV_MASK_NULL },
-  { "decfsz",  PIC12_MASK_DECFSZ,  PIC12_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWF5    , INV_MASK_NULL },
+  { "decfsz",  PIC12_MASK_DECFSZ,  PIC12_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWF5    , INV_MASK_SKIP },
   { "goto"  ,  PIC12_MASK_GOTO  ,  PIC12_INSN_GOTO  ,    ICODE_GOTO  , INSN_CLASS_LIT9     , INV_MASK_BANK },
   { "incf"  ,  PIC12_MASK_INCF  ,  PIC12_INSN_INCF  ,    ICODE_INCF  , INSN_CLASS_OPWF5    , INV_MASK_NULL },
-  { "incfsz",  PIC12_MASK_INCFSZ,  PIC12_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWF5    , INV_MASK_NULL },
+  { "incfsz",  PIC12_MASK_INCFSZ,  PIC12_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWF5    , INV_MASK_SKIP },
   { "iorlw" ,  PIC12_MASK_IORLW ,  PIC12_INSN_IORLW ,    ICODE_IORLW , INSN_CLASS_LIT8     , INV_MASK_NULL },
   { "iorwf" ,  PIC12_MASK_IORWF ,  PIC12_INSN_IORWF ,    ICODE_IORWF , INSN_CLASS_OPWF5    , INV_MASK_NULL },
   { "iread" ,  SX_MASK_IREAD    ,  SX_INSN_IREAD    ,    ICODE_IREAD , INSN_CLASS_IMPLICIT , INV_MASK_NULL }, /* SX only */
@@ -133,19 +133,19 @@ struct insn op_16cxx[] = {
   { "andwf" ,  PIC14_MASK_ANDWF ,  PIC14_INSN_ANDWF ,    ICODE_ANDWF , INSN_CLASS_OPWF7   , INV_MASK_NULL },
   { "bcf"   ,  PIC14_MASK_BCF   ,  PIC14_INSN_BCF   ,    ICODE_BCF   , INSN_CLASS_B7      , INV_MASK_NULL },
   { "bsf"   ,  PIC14_MASK_BSF   ,  PIC14_INSN_BSF   ,    ICODE_BSF   , INSN_CLASS_B7      , INV_MASK_NULL },
-  { "btfsc" ,  PIC14_MASK_BTFSC ,  PIC14_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_B7      , INV_MASK_NULL },
-  { "btfss" ,  PIC14_MASK_BTFSS ,  PIC14_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_B7      , INV_MASK_NULL },
+  { "btfsc" ,  PIC14_MASK_BTFSC ,  PIC14_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_B7      , INV_MASK_SKIP },
+  { "btfss" ,  PIC14_MASK_BTFSS ,  PIC14_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_B7      , INV_MASK_SKIP },
   { "call"  ,  PIC14_MASK_CALL  ,  PIC14_INSN_CALL  ,    ICODE_CALL  , INSN_CLASS_LIT11   , INV_MASK_BANK | INV_MASK_PAGE },
   { "clrf"  ,  PIC14_MASK_CLRF  ,  PIC14_INSN_CLRF  ,    ICODE_CLRF  , INSN_CLASS_OPF7    , INV_MASK_NULL },
   { "clrw"  ,  PIC14_MASK_CLRW  ,  PIC14_INSN_CLRW  ,    ICODE_CLRW  , INSN_CLASS_IMPLICIT, INV_MASK_NULL },
   { "clrwdt",  PIC14_MASK_CLRWDT,  PIC14_INSN_CLRWDT,    ICODE_CLRWDT, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
   { "comf"  ,  PIC14_MASK_COMF  ,  PIC14_INSN_COMF  ,    ICODE_COMF  , INSN_CLASS_OPWF7   , INV_MASK_NULL },
   { "decf"  ,  PIC14_MASK_DECF  ,  PIC14_INSN_DECF  ,    ICODE_DECF  , INSN_CLASS_OPWF7   , INV_MASK_NULL },
-  { "decfsz",  PIC14_MASK_DECFSZ,  PIC14_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWF7   , INV_MASK_NULL },
+  { "decfsz",  PIC14_MASK_DECFSZ,  PIC14_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWF7   , INV_MASK_SKIP },
   { "goto"  ,  PIC14_MASK_GOTO  ,  PIC14_INSN_GOTO  ,    ICODE_GOTO  , INSN_CLASS_LIT11   , INV_MASK_BANK },
   { "halt"  ,  PIC14_MASK_HALT  ,  PIC14_INSN_HALT  ,    ICODE_HALT  , INSN_CLASS_IMPLICIT, INV_MASK_NULL },  /* undocumented */
   { "incf"  ,  PIC14_MASK_INCF  ,  PIC14_INSN_INCF  ,    ICODE_INCF  , INSN_CLASS_OPWF7   , INV_MASK_NULL },
-  { "incfsz",  PIC14_MASK_INCFSZ,  PIC14_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWF7   , INV_MASK_NULL },
+  { "incfsz",  PIC14_MASK_INCFSZ,  PIC14_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWF7   , INV_MASK_SKIP },
   { "iorlw" ,  PIC14_MASK_IORLW ,  PIC14_INSN_IORLW ,    ICODE_IORLW , INSN_CLASS_LIT8    , INV_MASK_NULL },
   { "iorwf" ,  PIC14_MASK_IORWF ,  PIC14_INSN_IORWF ,    ICODE_IORWF , INSN_CLASS_OPWF7   , INV_MASK_NULL },
   { "movf"  ,  PIC14_MASK_MOVF  ,  PIC14_INSN_MOVF  ,    ICODE_MOVF  , INSN_CLASS_OPWF7   , INV_MASK_NULL },
@@ -215,8 +215,8 @@ const struct insn op_17cxx[] = {
   { "andwf" ,  PIC16_MASK_ANDWF ,  PIC16_INSN_ANDWF ,    ICODE_ANDWF , INSN_CLASS_OPWF8   , INV_MASK_NULL },
   { "bcf"   ,  PIC16_MASK_BCF   ,  PIC16_INSN_BCF   ,    ICODE_BCF   , INSN_CLASS_B8      , INV_MASK_NULL },
   { "bsf"   ,  PIC16_MASK_BSF   ,  PIC16_INSN_BSF   ,    ICODE_BSF   , INSN_CLASS_B8      , INV_MASK_NULL },
-  { "btfsc" ,  PIC16_MASK_BTFSC ,  PIC16_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_B8      , INV_MASK_NULL },
-  { "btfss" ,  PIC16_MASK_BTFSS ,  PIC16_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_B8      , INV_MASK_NULL },
+  { "btfsc" ,  PIC16_MASK_BTFSC ,  PIC16_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_B8      , INV_MASK_SKIP },
+  { "btfss" ,  PIC16_MASK_BTFSS ,  PIC16_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_B8      , INV_MASK_SKIP },
   { "btg"   ,  PIC16_MASK_BTG   ,  PIC16_INSN_BTG   ,    ICODE_BTG   , INSN_CLASS_B8      , INV_MASK_NULL },
   { "call"  ,  PIC16_MASK_CALL  ,  PIC16_INSN_CALL  ,    ICODE_CALL  , INSN_CLASS_LIT13   , INV_MASK_BANK | INV_MASK_PAGE },
   { "clrf"  ,  PIC16_MASK_CLRF  ,  PIC16_INSN_CLRF  ,    ICODE_CLRF  , INSN_CLASS_OPWF8   , INV_MASK_NULL },
@@ -226,13 +226,13 @@ const struct insn op_17cxx[] = {
   { "cpfsgt",  PIC16_MASK_CPFSGT,  PIC16_INSN_CPFSGT,    ICODE_CPFSGT, INSN_CLASS_OPF8    , INV_MASK_NULL },
   { "cpfslt",  PIC16_MASK_CPFSLT,  PIC16_INSN_CPFSLT,    ICODE_CPFSLT, INSN_CLASS_OPF8    , INV_MASK_NULL },
   { "daw"   ,  PIC16_MASK_DAW   ,  PIC16_INSN_DAW   ,    ICODE_DAW   , INSN_CLASS_OPWF8   , INV_MASK_NULL },
-  { "dcfsnz",  PIC16_MASK_DCFSNZ,  PIC16_INSN_DCFSNZ,    ICODE_DCFSNZ, INSN_CLASS_OPWF8   , INV_MASK_NULL },
+  { "dcfsnz",  PIC16_MASK_DCFSNZ,  PIC16_INSN_DCFSNZ,    ICODE_DCFSNZ, INSN_CLASS_OPWF8   , INV_MASK_SKIP },
   { "decf"  ,  PIC16_MASK_DECF  ,  PIC16_INSN_DECF  ,    ICODE_DECF  , INSN_CLASS_OPWF8   , INV_MASK_NULL },
-  { "decfsz",  PIC16_MASK_DECFSZ,  PIC16_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWF8   , INV_MASK_NULL },
+  { "decfsz",  PIC16_MASK_DECFSZ,  PIC16_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWF8   , INV_MASK_SKIP },
   { "goto"  ,  PIC16_MASK_GOTO  ,  PIC16_INSN_GOTO  ,    ICODE_GOTO  , INSN_CLASS_LIT13   , INV_MASK_BANK },
   { "incf"  ,  PIC16_MASK_INCF  ,  PIC16_INSN_INCF  ,    ICODE_INCF  , INSN_CLASS_OPWF8   , INV_MASK_NULL },
-  { "incfsz",  PIC16_MASK_INCFSZ,  PIC16_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWF8   , INV_MASK_NULL },
-  { "infsnz",  PIC16_MASK_INFSNZ,  PIC16_INSN_INFSNZ,    ICODE_INFSNZ, INSN_CLASS_OPWF8   , INV_MASK_NULL },
+  { "incfsz",  PIC16_MASK_INCFSZ,  PIC16_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWF8   , INV_MASK_SKIP },
+  { "infsnz",  PIC16_MASK_INFSNZ,  PIC16_INSN_INFSNZ,    ICODE_INFSNZ, INSN_CLASS_OPWF8   , INV_MASK_SKIP },
   { "iorlw" ,  PIC16_MASK_IORLW ,  PIC16_INSN_IORLW ,    ICODE_IORLW , INSN_CLASS_LIT8    , INV_MASK_NULL },
   { "iorwf" ,  PIC16_MASK_IORWF ,  PIC16_INSN_IORWF ,    ICODE_IORWF , INSN_CLASS_OPWF8   , INV_MASK_NULL },
   { "lcall" ,  PIC16_MASK_LCALL ,  PIC16_INSN_LCALL ,    ICODE_LCALL , INSN_CLASS_LIT8C16 , INV_MASK_BANK | INV_MASK_PAGE },
@@ -263,7 +263,7 @@ const struct insn op_17cxx[] = {
   { "tablwt",  PIC16_MASK_TABLWT,  PIC16_INSN_TABLWT,    ICODE_TABLWT, INSN_CLASS_TBL3    , INV_MASK_NULL },
   { "tlrd"  ,  PIC16_MASK_TLRD  ,  PIC16_INSN_TLRD  ,    ICODE_TLRD  , INSN_CLASS_TBL2    , INV_MASK_NULL },
   { "tlwt"  ,  PIC16_MASK_TLWT  ,  PIC16_INSN_TLWT  ,    ICODE_TLWT  , INSN_CLASS_TBL2    , INV_MASK_NULL },
-  { "tstfsz",  PIC16_MASK_TSTFSZ,  PIC16_INSN_TSTFSZ,    ICODE_TSTFSZ, INSN_CLASS_OPF8    , INV_MASK_NULL },
+  { "tstfsz",  PIC16_MASK_TSTFSZ,  PIC16_INSN_TSTFSZ,    ICODE_TSTFSZ, INSN_CLASS_OPF8    , INV_MASK_SKIP },
   { "xorlw" ,  PIC16_MASK_XORLW ,  PIC16_INSN_XORLW ,    ICODE_XORLW , INSN_CLASS_LIT8    , INV_MASK_NULL },
   { "xorwf" ,  PIC16_MASK_XORWF ,  PIC16_INSN_XORWF ,    ICODE_XORWF , INSN_CLASS_OPWF8   , INV_MASK_NULL }
 };
@@ -286,8 +286,8 @@ const struct insn op_18cxx[] = {
   { "bov"   , PIC16E_MASK_BOV   , PIC16E_INSN_BOV   ,    ICODE_BOV   , INSN_CLASS_RBRA8   , INV_MASK_NULL },
   { "bra"   , PIC16E_MASK_BRA   , PIC16E_INSN_BRA   ,    ICODE_BRA   , INSN_CLASS_RBRA11  , INV_MASK_BANK },
   { "bsf"   , PIC16E_MASK_BSF   , PIC16E_INSN_BSF   ,    ICODE_BSF   , INSN_CLASS_BA8     , INV_MASK_NULL },
-  { "btfsc" , PIC16E_MASK_BTFSC , PIC16E_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_BA8     , INV_MASK_NULL },
-  { "btfss" , PIC16E_MASK_BTFSS , PIC16E_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_BA8     , INV_MASK_NULL },
+  { "btfsc" , PIC16E_MASK_BTFSC , PIC16E_INSN_BTFSC ,    ICODE_BTFSC , INSN_CLASS_BA8     , INV_MASK_SKIP },
+  { "btfss" , PIC16E_MASK_BTFSS , PIC16E_INSN_BTFSS ,    ICODE_BTFSS , INSN_CLASS_BA8     , INV_MASK_SKIP },
   { "btg"   , PIC16E_MASK_BTG   , PIC16E_INSN_BTG   ,    ICODE_BTG   , INSN_CLASS_BA8     , INV_MASK_NULL },
   { "bz"    , PIC16E_MASK_BZ    , PIC16E_INSN_BZ    ,    ICODE_BZ    , INSN_CLASS_RBRA8   , INV_MASK_NULL },
   { "call"  , PIC16E_MASK_CALL  , PIC16E_INSN_CALL  ,    ICODE_CALL  , INSN_CLASS_CALL20  , INV_MASK_BANK },
@@ -298,14 +298,14 @@ const struct insn op_18cxx[] = {
   { "cpfsgt", PIC16E_MASK_CPFSGT, PIC16E_INSN_CPFSGT,    ICODE_CPFSGT, INSN_CLASS_OPFA8   , INV_MASK_NULL },
   { "cpfslt", PIC16E_MASK_CPFSLT, PIC16E_INSN_CPFSLT,    ICODE_CPFSLT, INSN_CLASS_OPFA8   , INV_MASK_NULL },
   { "daw"   , PIC16E_MASK_DAW   , PIC16E_INSN_DAW   ,    ICODE_DAW   , INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "dcfsnz", PIC16E_MASK_DCFSNZ, PIC16E_INSN_DCFSNZ,    ICODE_DCFSNZ, INSN_CLASS_OPWFA8  , INV_MASK_NULL },
+  { "dcfsnz", PIC16E_MASK_DCFSNZ, PIC16E_INSN_DCFSNZ,    ICODE_DCFSNZ, INSN_CLASS_OPWFA8  , INV_MASK_SKIP },
   { "decf"  , PIC16E_MASK_DECF  , PIC16E_INSN_DECF  ,    ICODE_DECF  , INSN_CLASS_OPWFA8  , INV_MASK_NULL },
-  { "decfsz", PIC16E_MASK_DECFSZ, PIC16E_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWFA8  , INV_MASK_NULL },
+  { "decfsz", PIC16E_MASK_DECFSZ, PIC16E_INSN_DECFSZ,    ICODE_DECFSZ, INSN_CLASS_OPWFA8  , INV_MASK_SKIP },
   { "goto"  , PIC16E_MASK_GOTO  , PIC16E_INSN_GOTO  ,    ICODE_GOTO  , INSN_CLASS_LIT20   , INV_MASK_BANK },
   { "halt"  , PIC16E_MASK_HALT  , PIC16E_INSN_HALT  ,    ICODE_HALT  , INSN_CLASS_IMPLICIT, INV_MASK_NULL }, /* undocumented */
   { "incf"  , PIC16E_MASK_INCF  , PIC16E_INSN_INCF  ,    ICODE_INCF  , INSN_CLASS_OPWFA8  , INV_MASK_NULL },
-  { "incfsz", PIC16E_MASK_INCFSZ, PIC16E_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWFA8  , INV_MASK_NULL },
-  { "infsnz", PIC16E_MASK_INFSNZ, PIC16E_INSN_INFSNZ,    ICODE_INFSNZ, INSN_CLASS_OPWFA8  , INV_MASK_NULL },
+  { "incfsz", PIC16E_MASK_INCFSZ, PIC16E_INSN_INCFSZ,    ICODE_INCFSZ, INSN_CLASS_OPWFA8  , INV_MASK_SKIP },
+  { "infsnz", PIC16E_MASK_INFSNZ, PIC16E_INSN_INFSNZ,    ICODE_INFSNZ, INSN_CLASS_OPWFA8  , INV_MASK_SKIP },
   { "iorlw" , PIC16E_MASK_IORLW , PIC16E_INSN_IORLW ,    ICODE_IORLW , INSN_CLASS_LIT8    , INV_MASK_NULL },
   { "iorwf" , PIC16E_MASK_IORWF , PIC16E_INSN_IORWF ,    ICODE_IORWF , INSN_CLASS_OPWFA8  , INV_MASK_NULL },
   { "lfsr"  , PIC16E_MASK_LFSR  , PIC16E_INSN_LFSR  ,    ICODE_LFSR  , INSN_CLASS_FLIT12  , INV_MASK_NULL },
@@ -340,7 +340,7 @@ const struct insn op_18cxx[] = {
   { "tblwt" , PIC16E_MASK_TBLWT , PIC16E_INSN_TBLWT ,    ICODE_TBLWT , INSN_CLASS_TBL     , INV_MASK_NULL },
   { "trap"  , PIC16E_MASK_TRAP  , PIC16E_INSN_TRAP  ,    ICODE_TRAP  , INSN_CLASS_IMPLICIT, INV_MASK_NULL }, /* undocumented */
   { "tret"  , PIC16E_MASK_TRET  , PIC16E_INSN_TRET  ,    ICODE_TRET  , INSN_CLASS_IMPLICIT, INV_MASK_BANK }, /* undocumented */
-  { "tstfsz", PIC16E_MASK_TSTFSZ, PIC16E_INSN_TSTFSZ,    ICODE_TSTFSZ, INSN_CLASS_OPFA8   , INV_MASK_NULL },
+  { "tstfsz", PIC16E_MASK_TSTFSZ, PIC16E_INSN_TSTFSZ,    ICODE_TSTFSZ, INSN_CLASS_OPFA8   , INV_MASK_SKIP },
   { "xorlw" , PIC16E_MASK_XORLW , PIC16E_INSN_XORLW ,    ICODE_XORLW , INSN_CLASS_LIT8    , INV_MASK_NULL },
   { "xorwf" , PIC16E_MASK_XORWF , PIC16E_INSN_XORWF ,    ICODE_XORWF , INSN_CLASS_OPWFA8  , INV_MASK_NULL }
 };
@@ -360,16 +360,16 @@ const struct insn op_18cxx_sp[] = {
   { "setn"  , 0xffff, PIC16ES_INSN_SETN  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
   { "setov" , 0xffff, PIC16ES_INSN_SETOV ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
   { "setz"  , 0xffff, PIC16ES_INSN_SETZ  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpc"  , 0xffff, PIC16ES_INSN_SKPC  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpdc" , 0xffff, PIC16ES_INSN_SKPDC ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpn"  , 0xffff, PIC16ES_INSN_SKPN  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpov" , 0xffff, PIC16ES_INSN_SKPOV ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpz"  , 0xffff, PIC16ES_INSN_SKPZ  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpnc" , 0xffff, PIC16ES_INSN_SKPNC ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpndc", 0xffff, PIC16ES_INSN_SKPNDC,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpnn" , 0xffff, PIC16ES_INSN_SKPNN ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpnov", 0xffff, PIC16ES_INSN_SKPNOV,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
-  { "skpnz" , 0xffff, PIC16ES_INSN_SKPNZ ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
+  { "skpc"  , 0xffff, PIC16ES_INSN_SKPC  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpdc" , 0xffff, PIC16ES_INSN_SKPDC ,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpn"  , 0xffff, PIC16ES_INSN_SKPN  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpov" , 0xffff, PIC16ES_INSN_SKPOV ,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpz"  , 0xffff, PIC16ES_INSN_SKPZ  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpnc" , 0xffff, PIC16ES_INSN_SKPNC ,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpndc", 0xffff, PIC16ES_INSN_SKPNDC,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpnn" , 0xffff, PIC16ES_INSN_SKPNN ,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpnov", 0xffff, PIC16ES_INSN_SKPNOV,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
+  { "skpnz" , 0xffff, PIC16ES_INSN_SKPNZ ,  0, INSN_CLASS_IMPLICIT, INV_MASK_SKIP },
   { "tgc"   , 0xffff, PIC16ES_INSN_TGC   ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
   { "tgdc"  , 0xffff, PIC16ES_INSN_TGDC  ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
   { "tgn"   , 0xffff, PIC16ES_INSN_TGN   ,  0, INSN_CLASS_IMPLICIT, INV_MASK_NULL },
