@@ -1,3 +1,9 @@
+2016-01-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/directive.c, gpasm/gpasm.h.in, gpasm/gperror.c,
+    gpasm/gperror.h, libgputils/gpopcode.c, libgputils/gpopcode.h:
+    Patch 2: #65 Smarter message 302
+    Tanks to Petr Mikse.
+
 2016-01-13  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.h.in,
     gpasm/gperror.c, gpasm/gperror.h, gpasm/util.c:
